--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -243,7 +243,7 @@
         height: 100%;
         width: 100%;
         .why-works-hdr {
-            color: #1C1C1C;
+            color: var(--color-1c);
             font-weight: 700;
             font-size: 30px;
             padding: 16px;
@@ -263,7 +263,7 @@
                 border-bottom: 1px solid #E2F5FF;
                 font-size: 14px;
                 font-weight: 700;
-                color: #1C1C1C;
+                color: var(--color-1c);
                 min-height: 110px;
                 display: flex;
                 align-items: center;
@@ -392,7 +392,7 @@
     li {
         h3 {
             font-weight: 600;
-            color: #1C1C1C;
+            color: var(--color-1c);
             margin-bottom: 0;
         }
 
@@ -526,7 +526,7 @@
 
             p {
                 margin-bottom: 0;
-                color: #4B4B4B;
+                color: var(--color-4b);
                 font-size: 20px;
                 @media (max-width:1399px) {
                     font-size: 17px;
@@ -837,7 +837,7 @@
                         display: none;
                     }
                     background: #fff;
-                    color: #1C1C1C;
+                    color: var(--color-1c);
                     white-space: nowrap;
                     span {
                         min-width: 20px;
