--- a/src/assets/styles/_login.scss
+++ b/src/assets/styles/_login.scss
@@ -392,7 +392,7 @@
 
         a {
             font-weight: 600;
-            color: #1C1C1C;
+            color: var(--color-1c);
             text-decoration: underline;
             &:hover {
                 color: var(--color-blue);
