--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -23,6 +23,7 @@
     --color-3d:#3D3D3D;
     --color-4b:#4B4B4B;
     --color-ce:#CECECE;
+    --color-1c: #1C1C1C;
     --font-24:24px;
     @media only screen and (max-width: 1680px) {
         --font-24:19px;
@@ -478,6 +479,11 @@ select {
         background-size: auto;
         background-position: right 27px center;
         font-weight: 400;
+        text-overflow: ellipsis;
+        padding-right: 50px;
+        @media only screen and (max-width: 767px) {
+            background-position: right 15px center;
+        }
         &:disabled {
             color: rgba(0,0,0,0.16);
         }
