--- a/src/assets/styles/_modal.scss
+++ b/src/assets/styles/_modal.scss
@@ -10,13 +10,13 @@ div:where(.swal2-container).swal2-noanimation {
 
 .modal-box {
     background: #F2F7FF;
-    border-radius: 24px;
-    max-width: 640px;
+    // border-radius: 24px;
+    // max-width: 640px;
     margin-left: auto;
     margin-right: auto;
     padding: 40px 0;
     &.width-lg {
-        max-width: 986px;
+        // max-width: 986px;
         padding: 70px;
     }
 
