--- a/src/assets/styles/_dashboard.scss
+++ b/src/assets/styles/_dashboard.scss
@@ -3100,7 +3100,7 @@ p.form-txt.mt-45 {
   padding: 20px 25px;
   margin-bottom: 15px;
 }
-.notification-box-innr,.shadow-box {
+.shadow-box {
   margin-left: 5px;
   margin-right: 5px;
 }
